# AgentPsyAssessment

./: .env.example  .gitignore  16_PERSONALITIES_COMPARISON_SUMMARY.md  ANALYSIS_DEBUG_REPORT.md  ANALYSIS_SCRIPTS_REPORT.md  BATCH_ANALYSIS_GUIDE.md  BIG_FIVE_ASSESSMENT_SUMMARY.md  BIG_FIVE_BATCH_ASSESSMENT_MANUAL.md  CHANGELOG.md  CLAUDE.md  CODEBUDDY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATOR_STATUS.md  EVALUATOR_STATUS_UPDATED.md  FINAL_IMPLEMENTATION_SUMMARY.md  HTML_ASSESSMENT_STATUS_REPORT.md  IMPLEMENTATION_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODEL_FAILURE_HANDLING_VERIFICATION.md  NOTICE  OLLAMA_GUIDE.md  OLLAMA_SETUP.md  OPENROUTER_SETUP_GUIDE.md  OPEN_SOURCE_RELEASE_FINAL_SUMMARY.md  OPEN_SOURCE_RELEASE_SUMMARY.md  OPERATION_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_README.md  PROJECT_STRUCTURE.md  QUICK_START.md  QUICK_START_ZH.md  README.md  README_MULTI_EVALUATOR.md  README_SEGMENTED_SCORING.md  RUN_IFLOW_ANALYSIS.md  SECURITY.md  SECURITY_FIXES_AND_IMPROVEMENTS_REPORT.md  SEGMENTED_ASSESSMENT_IMPLEMENTATION_PLAN.md  (+190 more)
.claude/: settings.local.json
MP/: application_prospects.md  assessment_methods.md  functional_specification.md  main_document.md  technical_highlights.md
analysis/: __init__.py  analyze_belbin_results.py  analyze_big5_results.py  analyze_mbti_results.py  analyze_results.py  generate_stress_recommendations.py
batchAnalysizeTools/: README.md  at_dimension.py  evaluator_config.json  sample_assessment_report.json  sample_assessment_report.md  sample_full_assessment_report.json  sample_full_assessment_report.md  test_batch_analyzer.py  test_full_assessment.py  test_ollama.py
complete_segmented_scoring_results/: asses_deepseek_r1_70b_agent_big_five_50_complete2_a10_e0_t0_0_09271_segmented_scoring_evaluation.json  asses_deepseek_r1_70b_agent_big_five_50_complete2_a10_e0_t0_0_09281_segmented_scoring_evaluation.json  asses_deepseek_r1_70b_agent_big_five_50_complete2_a1_e0_t0_0_09271_segmented_scoring_evaluation.json  (+11 more)
config/: models_config.json  ollama_config.json
(+48846 files in other folders)
