[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpsyassessment"
version = "1.0.0"
authors = [
    {name = "Zhang", email = "your-email@example.com"}
]
description = "A portable psychological assessment framework using LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Psychology",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "tqdm>=4.64.0",
    "jsonschema>=4.17.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
    "ollama>=0.1.0",
    "json5>=0.9.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/ptreezh/AgentPsyAssessment"
Repository = "https://github.com/ptreezh/AgentPsyAssessment"
"Bug Tracker" = "https://github.com/ptreezh/AgentPsyAssessment/issues"

[project.scripts]
agentpsy = "cli:main"
agentpsy-assess = "llm_assessment.run_assessment_unified:main"
agentpsy-batch = "llm_assessment.run_batch_suite:main"